# MQEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  Emergency-Check.ps1  GEMINI.md  README.md  README_zh.md  Todo.md  package-lock.json  package.json  pull.bat  vcpkg.json
.github/workflows/: deploy.yml
Config/: config_vcpkg.cmake  copy_headers.cmake  embed_resource.cmake  set_utf8_build_console.cmake  set_utf8_compiler_encoding.cmake
Docs/: Doxyfile
Editor/: CMakeLists.txt
Editor/src/: test.cpp
Editor/src/AssetsManager/: ModelManager.cpp  ModelManager.h  SceneManager.cpp  SceneManager.h  ScriptManager.cpp  ScriptManager.h  ShaderGraphBrowser.cpp  ShaderGraphBrowser.h  ShaderSnippetBrowser.cpp  ShaderSnippetBrowser.h
Editor/src/RenderGraphView/: NodeTutorials.cpp  PassGenerator.cpp  PassGenerator.h  Render.cpp  RenderGraphViewer.cpp  RenderGraphViewer.h
Editor/src/SceneViewer/: ComponentRenderer.h  EntityInspector.cpp  EntityInspector.h  Inspector.cpp  Inspector.h  InspectorObject.h  SceneEntityViewer.cpp  SceneEntityViewer.h
Editor/src/ShaderEditor/: ShaderEditor.cpp  ShaderEditor.h  ShaderGraph.cpp  ShaderGraph.h
Editor/src/codeGenerator/: PassGenerator.cpp  PassGenerator.h
Editor/src/core/: EditorApplication.cpp  EditorApplication.h  Global.h  RenderCallBack.cpp  entry.cpp
Editor/src/data/: NameTag.h  TypeTag.cpp  TypeTag.h
Editor/src/imgui/: ContentBrowser.cpp  ContentBrowser.h  EditorCameraManager.cpp  EditorCameraManager.h  GenericInputPopup.cpp  GenericInputPopup.h  GraphViewInsight.cpp  GraphViewInsight.h  UiManager.cpp  UiManager.h
Editor/src/type/: TypeFactory.cpp  TypeFactory.h
Engine/: CMakeLists.txt
Engine/src/: Engine.h  EnginePCH.h  engineapi.h  headers.h
Engine/src/core/: CreateApplication.h  EngineGlobal.h  EngineSnippets.cpp  GraphicsEnv.h  SingleQueueEventSystem.h  Tech.cpp  Tech.h  Tech.hpp  TextureUtils.cpp  TextureUtils.h  Tutorial.cpp  Uniform.h  UniformSlots.h  VertexLayouts.h  application.h  engine.cpp  engine.h  enginescope.h  entry.cpp  entry.h  imgui.cpp  layout.h  systemmanager.cpp  systemmanager.h
Engine/src/core/private/: enginescope.h
Engine/src/data/: Camera.h  Component.h  DataError.h  DataLoader.cpp  DataLoader.h  DataManager.cpp  DataManager.h  DiskResourceLoader.cpp  DiskResourceLoader.h  EnttArchiveWrapper.h  FileDataLoader.cpp  FileDataLoader.h  NameTag.cpp  NameTag.h  ResourceLoader.h  SavedComponentsList.h  Scene.cpp  Scene.h  SceneTrunk.cpp  SceneTrunk.h
Engine/src/event/: sceneEvent.h
Engine/src/manager/: RegistriesManager.cpp  RegistriesManager.h  RegistriesManager.hpp  ShaderFileWatcher.cpp  ShaderFileWatcher.h  ShaderGraphManager.cpp  ShaderGraphManager.h  ShaderSnippetManager.cpp  ShaderSnippetManager.h  SystemManager.cpp  SystemManager.h  TechManager.cpp  TechManager.h
Engine/src/system/: BindedSystem.cpp  BindedSystem.h  CacheSystem.cpp  CacheSystem.h  CameraSystem.cpp  CameraSystem.h  ComponentReflection.cpp  ComponentReflection.h  ISystem.cpp  ISystem.h  InputSystem.cpp  InputSystem.h  LightingSystem.cpp  LightingSystem.h  MatrixCacheSystem.cpp  MatrixCacheSystem.h  MeshCacheSystem.cpp  MeshCacheSystem.h  MeshRenderSystem.cpp  MeshRenderSystem.h  ResourceActiveSystem.cpp  ResourceActiveSystem.h  SamplerCacheSystem.cpp  SamplerCacheSystem.h  SceneSystem.cpp  SceneSystem.h  ScriptCacheSystem.cpp  ScriptCacheSystem.h  ScriptSystem.cpp  ScriptSystem.h  ShininessSystem.cpp  ShininessSystem.h  SkyBoxSystem.cpp  SkyBoxSystem.h  SkyboxCacheSystem.cpp  SkyboxCacheSystem.h  SystemManager.cpp  SystemManager.h  TechSystem.cpp  TechSystem.h  (+6 more)
Game/: CMakeLists.txt
Game/src/core/: GameApplication.cpp  GameApplication.h  entry.cpp
Launcher/: CMakeLists.txt
Launcher/src/core/: main.cpp
Res/: ball.mtl
Res/models/: floor_1.glb
Res/scripts/js/: ai_demo.js  classTest.js  rotateLightZ_new.js  rotate_light_z.js  testComponentReflection.js  test_rotation.js
Res/shaders/: DiffuseObjectPixel.hlsl  DiffuseObjectVertex.hlsl  NormalMapObjectPixel.hlsl  NormalMapObjectVertex.hlsl  ObjectPixel.hlsl  ObjectVertex.hlsl  PBRPixel.hlsl  PBRVertex.hlsl  ShadowVertex.hlsl  SkyboxPixel.hlsl  SkyboxVertex.hlsl  ToneMappingPixel.hlsl  ToneMappingVertex.hlsl
docs/: index.md  markdown-examples.md
docs/.vitepress/: config.mts
docs/document/: index.md
docs/document/contributing/: index.md
docs/document/contributing/development/: engine-architecture.md  index.md
docs/document/contributing/development/editor/: open-new-scene.md
docs/public/api/html/: _camera_8h.html  _camera_8h.js  _camera_8h__dep__incl.map  _camera_8h__dep__incl.md5  _camera_8h__incl.map  _camera_8h__incl.md5  _camera_8h_source.html  _camera_system_8cpp.html  _camera_system_8cpp__incl.map  _camera_system_8cpp__incl.md5  _camera_system_8h.html  _camera_system_8h.js  _camera_system_8h__dep__incl.map  _camera_system_8h__dep__incl.md5  _camera_system_8h__incl.map  _camera_system_8h__incl.md5  _camera_system_8h_source.html  _component_8h.html  _component_8h.js  _component_8h__dep__incl.map  _component_8h__dep__incl.md5  _component_8h__incl.map  _component_8h__incl.md5  _component_8h_source.html  _component_reflection_8cpp.html  _component_reflection_8cpp__incl.map  _component_reflection_8cpp__incl.md5  _component_reflection_8h.html  _component_reflection_8h.js  _component_reflection_8h__dep__incl.map  _component_reflection_8h__dep__incl.md5  _component_reflection_8h__incl.map  _component_reflection_8h__incl.md5  _component_reflection_8h_source.html  _component_renderer_8h.html  _component_renderer_8h.js  _component_renderer_8h__dep__incl.map  _component_renderer_8h__dep__incl.md5  _component_renderer_8h__incl.map  _component_renderer_8h__incl.md5  (+1662 more)
docs/public/api/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+78 more)
